# aidatum

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/aidatum/: __init__.py  api.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
